pro cons siamese

--- a/abbrev.bib
+++ b/abbrev.bib
@@ -189,6 +189,23 @@ url="https://doi.org/10.1007/978-0-387-30164-8_426"
   year={1951},
   publisher={JSTOR}
 }
+
+@article{hermans2017defense,
+  title={In defense of the triplet loss for person re-identification},
+  author={Hermans, Alexander and Beyer, Lucas and Leibe, Bastian},
+  journal={arXiv preprint arXiv:1703.07737},
+  year={2017}
+}
+
+@article{weinberger2009distance,
+  title={Distance metric learning for large margin nearest neighbor classification.},
+  author={Weinberger, Kilian Q and Saul, Lawrence K},
+  journal={Journal of machine learning research},
+  volume={10},
+  number={2},
+  year={2009}
+}
+
 @misc{ConvNet,
   title = {Convolutional Neural Networks, Explained},
   howpublished = {\url{https://towardsdatascience.com/convolutional-neural-networks-explained-9cc5188c4939}},
