--- a/abbrev.bib
+++ b/abbrev.bib
@@ -206,6 +206,105 @@ url="https://doi.org/10.1007/978-0-387-30164-8_426"
   year={2009}
 }
 
+@article{hosna2022transfer,
+  title={Transfer learning: a friendly introduction},
+  author={Hosna, Asmaul and Merry, Ethel and Gyalmo, Jigmey and Alom, Zulfikar and Aung, Zeyar and Azim, Mohammad Abdul},
+  journal={Journal of Big Data},
+  volume={9},
+  number={1},
+  pages={102},
+  year={2022},
+  publisher={Springer}
+}
+
+@article{duan2012learning,
+  title={Learning with augmented features for heterogeneous domain adaptation},
+  author={Duan, Lixin and Xu, Dong and Tsang, Ivor},
+  journal={arXiv preprint arXiv:1206.4660},
+  year={2012}
+}
+
+@inproceedings{kulis2011you,
+  title={What you saw is not what you get: Domain adaptation using asymmetric kernel transforms},
+  author={Kulis, Brian and Saenko, Kate and Darrell, Trevor},
+  booktitle={CVPR 2011},
+  pages={1785--1792},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{zhu2011heterogeneous,
+  title={Heterogeneous transfer learning for image classification},
+  author={Zhu, Yin and Chen, Yuqiang and Lu, Zhongqi and Pan, Sinno and Xue, Gui-Rong and Yu, Yong and Yang, Qiang},
+  booktitle={Proceedings of the AAAI conference on artificial intelligence},
+  volume={25},
+  number={1},
+  pages={1304--1309},
+  year={2011}
+}
+
+@inproceedings{pan2011transfer,
+  title={Transfer learning to predict missing ratings via heterogeneous user feedbacks},
+  author={Pan, Weike and Liu, Nathan N and Xiang, Evan W and Yang, Qiang},
+  booktitle={Proceedings of the Twenty-Second International Joint Conference on Artificial Intelligence, Barcelona, Catalonia, Spain},
+  pages={2318},
+  year={2011}
+}
+
+@inproceedings{liu2019exploring,
+  title={Exploring transfer learning to reduce training overhead of hpc data in machine learning},
+  author={Liu, Tong and Alibhai, Shakeel and Wang, Jinzhen and Liu, Qing and He, Xubin and Wu, Chentao},
+  booktitle={2019 IEEE International Conference on Networking, Architecture and Storage (NAS)},
+  pages={1--7},
+  year={2019},
+  organization={IEEE}
+}
+
+@article{simonyan2014very,
+  title={Very deep convolutional networks for large-scale image recognition},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={arXiv preprint arXiv:1409.1556},
+  year={2014}
+}
+
+@inproceedings{szegedy2015going,
+  title={Going deeper with convolutions},
+  author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={1--9},
+  year={2015}
+}
+
+@inproceedings{he2016deep,
+  title={Deep residual learning for image recognition},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={770--778},
+  year={2016}
+}
+
+@article{weiss2016survey,
+  title={A survey of transfer learning},
+  author={Weiss, Karl and Khoshgoftaar, Taghi M and Wang, DingDing},
+  journal={Journal of Big data},
+  volume={3},
+  number={1},
+  pages={1--40},
+  year={2016},
+  publisher={SpringerOpen}
+}
+
+@article{pan2009survey,
+  title={A survey on transfer learning},
+  author={Pan, Sinno Jialin and Yang, Qiang},
+  journal={IEEE Transactions on knowledge and data engineering},
+  volume={22},
+  number={10},
+  pages={1345--1359},
+  year={2009},
+  publisher={IEEE}
+}
+
 @misc{ConvNet,
   title = {Convolutional Neural Networks, Explained},
   howpublished = {\url{https://towardsdatascience.com/convolutional-neural-networks-explained-9cc5188c4939}},
@@ -242,3 +341,9 @@ url="https://doi.org/10.1007/978-0-387-30164-8_426"
   title = {Triplet Loss and Siamese Neural Networks},
   howpublished = {\url{https://medium.com/@enoshshr/triplet-loss-and-siamese-neural-networks-5d363fdeba9b}},
 }
+
+@misc{transfer_learning,
+  title = {What Is Transfer Learning? Exploring the Popular Deep Learning Approach.},
+  howpublished = {\url{https://builtin.com/data-science/transfer-learning}},
+}
+
