transfer learning completed

--- a/abbrev.bib
+++ b/abbrev.bib
@@ -305,6 +305,59 @@ url="https://doi.org/10.1007/978-0-387-30164-8_426"
   publisher={IEEE}
 }
 
+@inproceedings{raina2007self,
+  title={Self-taught learning: transfer learning from unlabeled data},
+  author={Raina, Rajat and Battle, Alexis and Lee, Honglak and Packer, Benjamin and Ng, Andrew Y},
+  booktitle={Proceedings of the 24th international conference on Machine learning},
+  pages={759--766},
+  year={2007}
+}
+
+@inproceedings{zadrozny2004learning,
+  title={Learning and evaluating classifiers under sample selection bias},
+  author={Zadrozny, Bianca},
+  booktitle={Proceedings of the twenty-first international conference on Machine learning},
+  pages={114},
+  year={2004}
+}
+
+@article{shimodaira2000improving,
+  title={Improving predictive inference under covariate shift by weighting the log-likelihood function},
+  author={Shimodaira, Hidetoshi},
+  journal={Journal of statistical planning and inference},
+  volume={90},
+  number={2},
+  pages={227--244},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{daume2006domain,
+  title={Domain adaptation for statistical classifiers},
+  author={Daume III, Hal and Marcu, Daniel},
+  journal={Journal of artificial Intelligence research},
+  volume={26},
+  pages={101--126},
+  year={2006}
+}
+
+@inproceedings{dai2008self,
+  title={Self-taught clustering},
+  author={Dai, Wenyuan and Yang, Qiang and Xue, Gui-Rong and Yu, Yong},
+  booktitle={Proceedings of the 25th international conference on Machine learning},
+  pages={200--207},
+  year={2008}
+}
+
+@inproceedings{wang2008transferred,
+  title={Transferred dimensionality reduction},
+  author={Wang, Zheng and Song, Yangqiu and Zhang, Changshui},
+  booktitle={Machine Learning and Knowledge Discovery in Databases: European Conference, ECML PKDD 2008, Antwerp, Belgium, September 15-19, 2008, Proceedings, Part II 19},
+  pages={550--565},
+  year={2008},
+  organization={Springer}
+}
+
 @misc{ConvNet,
   title = {Convolutional Neural Networks, Explained},
   howpublished = {\url{https://towardsdatascience.com/convolutional-neural-networks-explained-9cc5188c4939}},
