--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{todonotes}
+\usepackage{makecell}
 \usepackage{chngcntr}
 \counterwithin{figure}{subsection}
 \usepackage[symbols,nogroupskip,record]{glossaries-extra}
